--- a/admin/css/dtwc-admin.css
+++ b/admin/css/dtwc-admin.css
@@ -2,3 +2,15 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+#dtwc_business\[calendar_first_day\],
+#dtwc_advanced\[delivery_time_edit_order_display\] {
+   width: 25em;
+}
+
+@media screen and (max-width: 782px) {
+  #dtwc_business\[calendar_first_day\],
+  #dtwc_advanced\[delivery_time_edit_order_display\] {
+     width: 100%;
+  }
+}
